mps/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mps-svc
spec:
  selector:
    app: mps
  ports:
    - name: mps
      port: 4300
      targetPort: 4300
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mps
spec:
  selector:
    matchLabels:
      app: mps
  replicas: 2
  template:
    metadata:
      labels:
        app: mps
    spec:
      imagePullSecrets:
        - name: beren-registry
      containers:
        - name: mps
          image: docker.io/kebeney/beren:mps-0.0.38
          ports:
            - name: mps
              containerPort: 4300
          volumeMounts:
            - name: mps-volume
              mountPath: /opt/shared/data
            - name: keb-certs
              mountPath: /opt/shared/tls/keb
              readOnly: false
            - name: le-certs
              mountPath: /opt/shared/tls/le
              readOnly: false
      volumes:
        - name: mps-volume
          persistentVolumeClaim:
            claimName: mps-pvc
        - name: le-certs
          secret:
            secretName: le-tls
            defaultMode: 0600
        - name: keb-certs
          secret:
            secretName: keb-tls
            defaultMode: 0600
