mps/vault-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
spec:
  type: ExternalName
  externalName: dev.brn
